<resources>
    <string name="app_name">DH Wallet</string>
    <string name="content_description_profile">foto do perfil</string>
    <string name="title_limit">Limite</string>
    <string name="content_description_credit_card_flag">bandeira visa</string>
    <string name="credit_card_title_name">Nome</string>
    <string name="credit_card_title_expire">VALIDADE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="limite">Limite</string>
    <string name="valorentrada">R$45,00</string>
    <string name="asteristicos_text">****</string>
    <string name="data_exemplo">1989</string>
    <string name="texto_servico">Serviços</string>
    <string name="entradas">Entradas</string>
    <string name="saidas">Saidas</string>
    <string name="parametroentrada">parâmetroEntrada</string>
    <string name="parametrosaida">parâmetroSaída</string>
    <string name="texto_transferir">Transferir</string>
    <string name="texto_exemplo_dia_atual">Hoje</string>
    <string name="texto_titulo_transfer">TRANSFERÊNCIA</string>
    <string name="texto_contatos">Contatos</string>
    <string name="nome_do_contato">Nome do Contato</string>
    <string name="descricao_do_contato">Descrição do contato</string>
    <string name="texto_titulo_item_transaction">Título do Lancamento</string>
    <string name="texto_subtitulo_item_transaction">Tipo do Lançamento</string>
    <string name="texto_campo_valor_item">Valor</string>
    <string name="texto_ofertas">Ofertas</string>
    <string name="descontos">Descontos</string>
    <string name="transacoes">Transações</string>
    <string name="nome_card">Nome e sobrenome</string>
    <string name="pagamentos">PAGAMENTOS</string>
    <string name="texto_titulo_usados">Mais Usados</string>
    <string name="date_vencimento">09/24</string>
</resources>