<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imagem_cardinfo"
        android:layout_width="245dp"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/card_banco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/campo_valor_limite_itemcard"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:text="@string/valorentrada"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subtitulo_numerocard_itemcard"
        app:layout_constraintEnd_toEndOf="@+id/imagem_cardinfo"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="@+id/imagem_cardinfo"
        app:layout_constraintTop_toTopOf="@+id/imagem_cardinfo" />

    <TextView
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limite"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/imagem_cardinfo"
        app:layout_constraintBottom_toTopOf="@+id/campo_valor_limite_itemcard"
        app:layout_constraintStart_toStartOf="@+id/campo_valor_limite_itemcard" />

    <TextView
        android:id="@+id/subtitulo_numerocard_itemcard"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="18dp"
        android:text="@string/asteristicos_text"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagem_cardinfo"
        app:layout_constraintStart_toStartOf="@+id/imagem_cardinfo"
        app:layout_constraintTop_toBottomOf="@+id/campo_valor_limite_itemcard" />

    <TextView
        android:id="@+id/subtitulo_numerocard_itemcard1"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/asteristicos_text"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtitulo_numerocard_itemcard"
        app:layout_constraintStart_toEndOf="@+id/subtitulo_numerocard_itemcard" />

    <TextView
        android:id="@+id/subtitulo_numerocard_itemcard2"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/asteristicos_text"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtitulo_numerocard_itemcard1"
        app:layout_constraintStart_toEndOf="@+id/subtitulo_numerocard_itemcard1" />

    <TextView
        android:id="@+id/subtitulo_numerocard_itemcard3"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/data_exemplo"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtitulo_numerocard_itemcard2"
        app:layout_constraintStart_toEndOf="@+id/subtitulo_numerocard_itemcard2"
        app:layout_constraintTop_toTopOf="@+id/subtitulo_numerocard_itemcard2" />

    <TextView
        android:id="@+id/titulo_nome_Card_info"
        android:layout_width="99dp"
        android:layout_height="12dp"
        android:text="@string/nome_card"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/imagem_cardinfo"
        app:layout_constraintStart_toStartOf="@+id/subtitulo_numerocard_itemcard"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo_numerocard_itemcard" />

    <TextView
        android:id="@+id/campo_validade_CardInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_vencimento"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/titulo_nome_Card_info"
        app:layout_constraintEnd_toEndOf="@+id/imagem_cardinfo"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toEndOf="@+id/titulo_nome_Card_info"
        app:layout_constraintTop_toTopOf="@+id/titulo_nome_Card_info"
        app:layout_constraintVertical_bias="0.428" />


</androidx.constraintlayout.widget.ConstraintLayout>