<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentoTela_Home_transaction">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_card_top"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horzontal_hometransaction" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_hometransaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="TRANSAÇÔES"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/foto_toolbar_hometransaction"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foto"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imagem_voltar_homeTransaction_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_arrow_backward"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horzontal_hometransaction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="223dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start_hometransaction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end_hometransaction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/titulo_texto_entrada_hometransaction"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/entradas"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/titulo_texto_saida_hometransaction"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_hometransaction" />

    <TextView
        android:id="@+id/titulo_texto_saida_hometransaction"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="84dp"
        android:text="@string/saidas"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_hometransaction" />

    <TextView
        android:id="@+id/campo_valorEntrada_hometransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/parametroentrada"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horzontal_hometransaction"
        app:layout_constraintEnd_toEndOf="@+id/titulo_texto_entrada_hometransaction"
        app:layout_constraintStart_toEndOf="@+id/titulo_texto_entrada_hometransaction"
        app:layout_constraintStart_toStartOf="@+id/titulo_texto_entrada_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/titulo_texto_entrada_hometransaction" />

    <TextView
        android:id="@+id/campo_valorSaida_hometransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/parametrosaida"
        app:layout_constraintBottom_toTopOf="@id/guideline_horzontal_hometransaction"
        app:layout_constraintEnd_toEndOf="@+id/titulo_texto_saida_hometransaction"
        app:layout_constraintStart_toStartOf="@+id/titulo_texto_saida_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/titulo_texto_saida_hometransaction" />

    <TextView
        android:id="@+id/titulo_texto_transferir_hometransaction"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/texto_transferir"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start_hometransaction"
        app:layout_constraintTop_toTopOf="@+id/guideline_horzontal_hometransaction" />

    <TextView
        android:id="@+id/titulo_texto_diaHoje_hometransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/texto_exemplo_dia_atual"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/titulo_texto_transferir_hometransaction" />

    <ImageView
        android:id="@+id/icone_avancar_hometransaction"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horzontal_hometransaction"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_layout_telaHometransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end_hometransaction"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start_hometransaction"
        app:layout_constraintTop_toBottomOf="@+id/titulo_texto_diaHoje_hometransaction"
        app:layout_constraintVertical_bias="0.185"
        tools:itemCount="2"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/layout_item_transaction" />


</androidx.constraintlayout.widget.ConstraintLayout>

